fix(arc-160): align footer items

--- a/src/modules/navigation/components/Footer/Footer.module.scss
+++ b/src/modules/navigation/components/Footer/Footer.module.scss
@@ -60,6 +60,10 @@
 		padding: 0 $spacer-md;
 	}
 
+	&__image-link {
+		display: inline-flex;
+	}
+
 	&__left,
 	&__right {
 		display: flex;
